name:                pure-sea
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/pure-sea#readme
license:             BSD3
license-file:        LICENSE
author:              Mateusz Belicki 
maintainer:          _@belickim.net
copyright:           2015 Mateuz Belicki
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pure-sea
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
